Added basic CSS styling to index page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UFT-8">
+        
         <title></title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
@@ -9,10 +10,9 @@
     <body>
         <header>
             <h1>Phoenix Kargbo</h1>
-            
         </header>
 
-        <nav>
+        <nav id="nav-container">
             <ul>
                 <li><a href="index.html">Resume</a></li>
                 <li><a href="coverletter.html">Cover Letter</a></li>
@@ -74,7 +74,7 @@
 
                     <tr>
                         <td>Adventure Guide</td>
-                        <td>5 Wits</td>
+                        <td><em>5 Wits</em></td>
                         <td>June 2023 - January 2024</td>
                         <td>
                             <ul>
@@ -87,7 +87,7 @@
 
                     <tr>
                         <td>Administrative Assistant</td>
-                        <td>Fassity Home Care</td>
+                        <td><em>Fassity Home Care</em></td>
                         <td>June 2021 - September 2022</td>
                         <td>
                             <ul>
@@ -100,7 +100,7 @@
 
                     <tr>
                         <td>Server</td>
-                        <td>Harmony Senior Services</td>
+                        <td><em>Harmony Senior Services</em></td>
                         <td>August 2019 - December 2019</td>
                         <td>
                             <ul>
