--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UFT-8">
-        
+
         <title></title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
@@ -14,9 +14,9 @@
 
         <nav id="nav-container">
             <ul>
-                <li><a href="index.html">Resume</a></li>
-                <li><a href="coverletter.html">Cover Letter</a></li>
-                <li><a href="goals.html">Goals</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="cover-letter.html">Cover Letter</a></li>
+                <li><a href="career-goals.html">Career Goals</a></li>>
             </ul>
         </nav>
         
@@ -38,7 +38,7 @@
                 <h2>Education</h2>
                 <hr>
                 <table>
-                    <caption><strong>Western Governors University</strong> </caption>
+                    <caption class="left-align"><strong>Western Governors University</strong> </caption>
                     <thead>
                         <tr>
                             <th></th>
@@ -56,7 +56,7 @@
 
                 </table>
                 <p></p>
-            </section>
+            </section><br>
 
             <section id="experience">
                 <table>
