Added career-goals page

--- a/cover-letter.html
+++ b/cover-letter.html
@@ -17,11 +17,11 @@
                 <li><a href="cover-letter.html">Cover Letter</a></li>
                 <li><a href="career-goals.html">Career Goals</a></li>
             </ul>
-        </nav>
+        </nav><br>
 
         <main>
             <section id="address">
-                <h1>Phoenix Kargbo</h1>
+                <h3>Phoenix Kargbo</h3>
                 <p>phoenixkargbo@gmail.com | <a href="https://www.linkedin.com/in/phoenix-k/">linkedin.com/in/phoenix-k</a></p><br>
 
             </section>
@@ -29,7 +29,7 @@
             <article id="letter">
                 <p>Dear Hiring Manager,</p>
                 <p>I am currently pursing a <strong>Bachelor of Science in Computer Science</strong>  at Western Governors University and am seeking opportunities where I can apply my growing skills. With a long term goal of becoming a <em>software engineer</em>, I am seeking to gain hands-on experience contributing to meaningful technical projects.</p>
-                <p>Through personal projects like <em>Focus Flow</em>, a productivity web app, I have developed skills in debugging, problem-solving, and structuring functional user interfaces using JavaScript, HTML, and CSS. I have also participated in hackathon projects like <em>Hearth</em> and <em>Lovelace Logs</em>, where I helped with front-end development, UI design, and research. These experiences improved my capacity to adapt, collaborate, and <mark>document technical processes</mark>.</p>
+                <p>Through personal projects like <em>Focus Flow</em>, a productivity web app, I have developed foundational skills in debugging, problem-solving, and structuring functional user interfaces using JavaScript, HTML, and CSS. I have also participated in hackathon projects like <em>Hearth</em> and <em>Lovelace Logs</em>, where I helped with front-end development, UI design, and research. These experiences improved my capacity to adapt, collaborate, and <mark>document technical processes</mark>.</p>
                 <p>I am especially drawn to roles that value <strong>creativity</strong>, <strong>teamwork</strong>, and <strong>user-focused design</strong>. I would appreciate the opportunity to bring my energy and dedication to your team while continuing to grow as a developer. Thank you for considering my application.</p>
                 <p>Sincerely,</p>
                 <p><span class="name">Phoenix Kargbo</span></p>
